Dockerizando a aplicação e configurando as entidades

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /AppMvcBasica/.vs/AppMvcBasica/v16
 /AppMvcBasica/AppMvcBasica/bin/Debug/netcoreapp3.0
 /AppMvcBasica/AppMvcBasica/obj
+/AppMvcBasica/.vs/AppMvcBasica/DesignTimeBuild
