--- a/AppMvcBasica/AppMvcBasica/appsettings.json
+++ b/AppMvcBasica/AppMvcBasica/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-AppMvcBasica-BC3E715A-FDCC-4AB0-A9E9-F3392EE9CEE8;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+	"ConnectionStrings": {
+		"DefaultConnection": "Server=app-mvc-basico-postgres;Database=appmvcbasico;Trusted_Connection=True;MultipleActiveResultSets=true"
+	},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
