Reinicio e configuração docker

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /AppMvcBasica/AppMvcBasica/bin/Debug/netcoreapp3.0
 /AppMvcBasica/AppMvcBasica/obj
 /AppMvcBasica/.vs/AppMvcBasica/DesignTimeBuild
+/AppMvcBasico/obj
+/obj
