--- a/AppMvcBasico/appsettings.json
+++ b/AppMvcBasico/appsettings.json
@@ -1,13 +1,13 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-AppMvcBasico-A905E659-0158-437C-9C31-26A3A94ED394;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+	"ConnectionStrings": {
+		"DefaultConnection": "Data Source=localhost,1433;User ID=sa;Password=123Aa321;Database=teste;Trusted_Connection=False;MultipleActiveResultSets=true"
+	},
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft": "Warning",
+			"Microsoft.Hosting.Lifetime": "Information"
+		}
+	},
+	"AllowedHosts": "*"
 }
